main content end

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="wrapper">
                <section class="header_contact ">
 
-                  <div class="header_contact_first header_display_none">Интернет-магазин
+                  <div name="top" class="header_contact_first header_display_none">Интернет-магазин
                      кодов активации ОФД</div>
                   <div class="header_contact_child2 header_display_none">Пн-Пт: 09:00 - 19:00
                      Сб-Вс: 10:00 - 17:00 </div>
@@ -418,64 +418,191 @@
                <div class="shop_tools_item">
                   <figure class="shop_tool_items">
                      <div class="shop_tool_item"><img src="./img/shop_tool_item1.svg" alt="registration"></div>
-                     <figcaption class="shop_tool_description">Регистрируем в ФНС</figcaption>
+                     <figcaption class="shop_tool_description">Регистрируем
+                        в ФНС</figcaption>
                   </figure>
-                     <button class="shop_tool_order">Заказать</button>
+                  <button class="shop_tool_order">Заказать</button>
                </div>
                <div class="shop_tools_item">
                   <figure class="shop_tool_items">
                      <div class="shop_tool_item"><img src="./img/shop_tool_item2.svg" alt="registration"></div>
-                     <figcaption class="shop_tool_description">Оформляем
-                        электронную подпись</figcaption>
+                     <figcaption class="shop_tool_description">Подключаем
+                        к ОФД</figcaption>
                   </figure>
-                     <button class="shop_tool_order">Заказать</button>
+                  <button class="shop_tool_order">Заказать</button>
                </div>
                <div class="shop_tools_item">
                   <figure class="shop_tool_items">
                      <div class="shop_tool_item"><img src="./img/shop_tool_item3.svg" alt="registration"></div>
-                     <figcaption class="shop_tool_description">Подключаем к ОФД</figcaption>
+                     <figcaption class="shop_tool_description">Оформляем
+                        электронную
+                        подпись</figcaption>
                   </figure>
-                     <button class="shop_tool_order">Заказать</button>
+                  <button class="shop_tool_order">Заказать</button>
                </div>
                <div class="shop_tools_item">
                   <figure class="shop_tool_items">
                      <div class="shop_tool_item"><img src="./img/shop_tool_item4.svg" alt="registration"></div>
-                     <figcaption class="shop_tool_description">Предоставляем техническое 
-                        сопровождение оборудования</figcaption>
+                     <figcaption class="shop_tool_description">Пере-регистрируем
+                        ККТ</figcaption>
                   </figure>
-                     <button class="shop_tool_order">Заказать</button>
+                  <button class="shop_tool_order">Заказать</button>
                </div>
                <div class="shop_tools_item">
                   <figure class="shop_tool_items">
                      <div class="shop_tool_item"><img src="./img/shop_tool_item5.svg" alt="registration"></div>
                      <figcaption class="shop_tool_description">Снимаем кассы с учета</figcaption>
                   </figure>
-                     <button class="shop_tool_order">Заказать</button>
+                  <button class="shop_tool_order">Заказать</button>
                </div>
                <div class="shop_tools_item">
                   <figure class="shop_tool_items">
                      <div class="shop_tool_item"><img src="./img/shop_tool_item7.svg" alt="registration"></div>
                      <figcaption class="shop_tool_description">Обучаем в работе с ККТ</figcaption>
                   </figure>
-                     <button class="shop_tool_order">Заказать</button>
+                  <button class="shop_tool_order">Заказать</button>
                </div>
                <div class="shop_tools_item">
                   <figure class="shop_tool_items">
                      <div class="shop_tool_item"><img src="./img/shop_tool_item8.svg" alt="registration"></div>
-                     <figcaption class="shop_tool_description">Производим замену
-                        фискального накопителя</figcaption>
+                     <figcaption class="shop_tool_description">Снимаем
+                        кассы с учета</figcaption>
                   </figure>
-                     <button class="shop_tool_order">Заказать</button>
+                  <button class="shop_tool_order">Заказать</button>
                </div>
                <div class="shop_tools_item">
                   <figure class="shop_tool_items">
                      <div class="shop_tool_item"><img src="./img/shop_tool_item1.svg" alt="registration"></div>
                      <figcaption class="shop_tool_description">Регистрируем в ФНС</figcaption>
                   </figure>
-                     <button class="shop_tool_order">Заказать</button>
+                  <button class="shop_tool_order">Заказать</button>
                </div>
             </div>
          </div>
+         <div class="question">
+            <h2 class="subtitle_shop subtitle_question">Есть вопросы?</h2>
+            <div class="question_text">
+               Наши специалисты свяжутся с вами и найдут оптимальные для вас условия сотрудничества
+            </div>
+            <form class="question_form" action="#">
+               <input class="question_input" type="text" placeholder="Имя">
+               <input class="question_input" type="tel" maxlength="8" placeholder="Телефон">
+               <!-- <button class="question_button">Заказать конcультацию</button> -->
+               <input class="order_consultation" type="submit" value="Заказать конcультацию">
+            </form>
+            <div class="question_text2">
+               Нажимая кнопку "Заказать консультацию" вы соглашаетесь
+               с политикой обработки персональнх данных
+            </div>
+         </div>
+         <div class="wrapper">
+            <div class="useful_information">
+               <h2 class="useful_information_title">Полезная информация</h2>
+               <div class="use_inf_cards">
+                  <div class="use_inf_card">
+                     <picture>
+                        <img width="100%" height="auto" srcset="./img/use_inf_card_img.jpg" alt="picture">
+                        <source srcset="./img/use_inf_card_img3.jpg" media="(max-width: 1400)">
+                     </picture>
+                     <div class="use_inf_card_text">Кому нужна касса
+                        с 1 июля 2019года?!</div>
+                     <div class="use_inf_card_data">01.01.2022</div>
+                  </div>
+                  <div class="use_inf_card">
+                     <picture>
+                        <source srcset="./img/use_inf_card_img3.jpg" media="(max-width: 1400)">
+                        <img width="100%" height="auto" srcset="./img/use_inf_card_img2.jpg" alt="picture">
+                     </picture>
+                     <div class="use_inf_card_text">Кому продлили отсрочку
+                        до 2021 года?!</div>
+                     <div class="use_inf_card_data">01.01.2022</div>
+                  </div>
+                  <div class="use_inf_card">
+                     <picture>
+                        <source srcset="./img/use_inf_card_img3.jpg" media="(max-width: 1400)">
+                        <img width="100%" height="auto" srcset="./img/use_inf_card_img3.jpg" alt="picture">
+                     </picture>
+                     <div class="use_inf_card_text">Налоговые штрафы</div>
+                     <div class="use_inf_card_data">01.01.2022</div>
+                  </div>
+                  <div class="use_inf_card">
+                     <picture>
+                        <!-- <source srcset="./img/use_inf_card_img3.jpg" media="(max-width: 1400)"> -->
+                        <img width="100%" height="auto" srcset="./img/use_inf_card_img4.jpg" alt="picture">
+                     </picture>
+                     <div class="use_inf_card_text">Виды ККТ</div>
+                     <div class="use_inf_card_data">01.01.2022</div>
+                  </div>
+               </div>
+               <div class="add_review ">Все статьи</div>
+            </div>
+
+         </div>
+         <footer>
+            <div class="wrapper">
+               <div class="footer_block">
+
+                  <div class="footer_inf">
+                     <ul class="footer_inf_list">
+                        <li><a class="footer_inf_link" href="">Каталог товаров</a> </li>
+                        <li><a class="footer_inf_link" href="">О магазине</a></li>
+                        <li><a class="footer_inf_link" href="">Доставка и оплата</a></li>
+                        <li><a class="footer_inf_link" href="">Наши услуги</a></li>
+                        <li><a class="footer_inf_link" href="">Отзывы</a></li>
+                        <li><a class="footer_inf_link" href="">Статьи</a></li>
+                        <li><a class="footer_inf_link" href="">Контакты</a></li>
+                     </ul>
+                     <div class="footer_inf_mail">
+                        <div>
+                           <img src="./img/footee_mail.svg" alt="#">
+                        </div>
+                        <div class="footer_inf_mail_text">
+                           Электронная почта <br>
+                           sevkassaru@yandex.ru
+                        </div>
+
+                     </div>
+                     <div class="footer_inf_mail">
+                        <div>
+                           <img src="./img/footer_inf_tel.svg" alt="#">
+                        </div>
+                        <div class="footer_inf_mail_text">
+                           Телефон <br>
+                           +7 (978) 136-36-06
+                        </div>
+
+                     </div>
+                     <div class="footer_inf_mail footer_inf_adress">
+                        <div>
+                           <img src="./img/footer_inf_adress.svg" alt="#">
+                        </div>
+                        <div class="footer_inf_mail_text">
+                           Адрес <br>
+                           г. Севастополь пл. Пирогова, дом 7
+                        </div>
+
+                     </div>
+
+                  </div>
+                  <div class="footer_inf_sub">
+                     <div class="footer_logo">
+                        Sev-Kassa
+                     </div>
+                     <div class="licensed">
+                        © 2022 Sevkassa.ru - ключи ктивации <br> ОФД по выгодным ценам!
+                     </div>
+                     <div class="footer_political">
+                        Политика конфиленциальности
+                     </div>
+                     <div class="footer_999">
+                        ОГРН 99999999999999999
+                        <div class="footer_pageup"> <a href="#top"> <img src="./img/arrow_up.svg" alt="#"></a> </div>
+                        <div class="footer_pageup_mini"><a href="#top">В начало</a> </div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </footer>
       </div>
    </div>
 
