--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
                         </div>
 
                      </div>
-                     <div class="footer_inf_mail">
+                     <div class="footer_inf_tel">
                         <div>
                            <img src="./img/footer_inf_tel.svg" alt="#">
                         </div>
@@ -572,7 +572,7 @@
                         </div>
 
                      </div>
-                     <div class="footer_inf_mail footer_inf_adress">
+                     <div class="footer_inf_adress">
                         <div>
                            <img src="./img/footer_inf_adress.svg" alt="#">
                         </div>
@@ -584,21 +584,21 @@
                      </div>
 
                   </div>
-                  <div class="footer_inf_sub">
-                     <div class="footer_logo">
-                        Sev-Kassa
-                     </div>
-                     <div class="licensed">
-                        © 2022 Sevkassa.ru - ключи ктивации <br> ОФД по выгодным ценам!
-                     </div>
-                     <div class="footer_political">
-                        Политика конфиленциальности
-                     </div>
-                     <div class="footer_999">
-                        ОГРН 99999999999999999
-                        <div class="footer_pageup"> <a href="#top"> <img src="./img/arrow_up.svg" alt="#"></a> </div>
-                        <div class="footer_pageup_mini"><a href="#top">В начало</a> </div>
-                     </div>
+               </div>
+               <div class="footer_inf_sub">
+                  <div class="footer_logo">
+                     Sev-Kassa
+                  </div>
+                  <div class="licensed">
+                     © 2022 Sevkassa.ru - ключи ктивации <br> ОФД по выгодным ценам!
+                  </div>
+                  <div class="footer_political">
+                     Политика конфиленциальности
+                  </div>
+                  <div class="footer_999">
+                     ОГРН 99999999999999999
+                     <div class="footer_pageup"> <a href="#top"> <img src="./img/arrow_up.svg" alt="#"></a> </div>
+                     <div class="footer_pageup_mini"><a href="#top">В начало</a> </div>
                   </div>
                </div>
             </div>
